--- a/src/sass/layout/_homepage.scss
+++ b/src/sass/layout/_homepage.scss
@@ -468,6 +468,35 @@ footer {
 }
 /*Footer*/
 
+#return-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background: rgba(0, 0, 0, 0.7);
+    width: 50px;
+    height: 50px;
+    display: block;
+    text-decoration: none;
+    @include border-radius(35px);
+    @include transition(all 0.3s linear);
+}
+#return-to-top svg {
+    color: #fff;
+    margin: 0;
+    position: relative;
+    left: 19px;
+    top: 13px;
+    font-size: 19px;
+    @include transition(all 0.3s linear);
+}
+#return-to-top:hover {
+    background: rgba(0, 0, 0, 0.9);
+}
+#return-to-top:hover svg {
+    color: #fff;
+    top: 5px;
+}
+
 h1 {
 	@extend %title;
 	font-size: $heading-one;
