--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -1,10 +1,10 @@
-$title-font: 'Mali', cursive;
+$title-font: 'Amatic SC', cursive;
 $body-font: 'Roboto Condensed', sans-serif;
 $regular-font: 12px;
 $sub-title: 16px;
 $text: 14px;
-$heading-one: 3vw;
-$heading-two: 2vw;
+$heading-one: 5vw;
+$heading-two: 3vw;
 $heading-one-mobile: 8vw;
 $heading-two-mobile: 6vw;
 // media queries
