--- a/src/sass/layout/_homepage.scss
+++ b/src/sass/layout/_homepage.scss
@@ -284,7 +284,7 @@ header {
 	background-image: url(../../images/pasta.jpg);
 	color: $white;
 	padding: 125px 0 !important;
-	text-align: center;
+	// text-align: center;
 
 	@include respond-to(handhelds) {
     	text-align: center !important;
@@ -300,7 +300,7 @@ header {
 		&::after {
 			@extend %curly-lines;
 			top: 295px;
-			left: 240px;
+			left: 14px;
 		} 
     }
 }
