--- a/src/sass/layout/_extend.scss
+++ b/src/sass/layout/_extend.scss
@@ -81,8 +81,9 @@
 }
 
 %curly-lines {
-	position: absolute;
-    content: "〜〜〜〜〜";
-    font-size: 25px;
+    font-size: 23px;
     letter-spacing: -7px;
+    color: $brand-color;
+    margin-bottom: 0px !important;
+    font-weight: 700;
 }
